--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -97,6 +97,7 @@
 \newcommand{\B}{{\mathcal B}}
 \newcommand{\mcm}{{\text{mcm}}}
 \newcommand{\rg}{{\text{rg}}}
+\newcommand{\dq}{{\dot{\mathbf q}}}
 \newcommand{\ve}{{\bar v}}
 \newcommand{\spaz}{{\text{\hphantom{aa}}}}
 \newcommand{\MCD}{{\text{MCD}}}
